[gd_scene load_steps=11 format=3 uid="uid://citvbrqsmiufi"]

[ext_resource type="PackedScene" uid="uid://dy3qneewdc35v" path="res://components/hand/user_hand/user_actions.tscn" id="1_0k1h2"]
[ext_resource type="Script" uid="uid://cm86apdqhnc8l" path="res://components/hand/user_hand/user_hand.gd" id="1_7b1a3"]
[ext_resource type="PackedScene" uid="uid://b08rtywbsbu8o" path="res://components/card/card.tscn" id="1_ukqhq"]
[ext_resource type="Script" uid="uid://dwhjkjy1c4s7g" path="res://components/hand/user_card_container.gd" id="2_7b1a3"]
[ext_resource type="Theme" uid="uid://dvuhetf2ik7ji" path="res://themes/red.tres" id="2_pnypn"]
[ext_resource type="Texture2D" uid="uid://dnswgjjnwadok" path="res://art/ui/player_border.png" id="3_pnypn"]

[sub_resource type="Animation" id="Animation_t2hoi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DrawLimitAlert/DrawLimitPanel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DrawLimitAlert/DrawLimitPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_pnypn"]
resource_name = "draw_limit_alert"
length = 1.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DrawLimitAlert/DrawLimitPanel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 1.25, 1.5),
"transitions": PackedFloat32Array(-2, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DrawLimitAlert/DrawLimitPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yk8ou"]
_data = {
&"RESET": SubResource("Animation_t2hoi"),
&"draw_limit_alert": SubResource("Animation_pnypn")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pnypn"]
texture = ExtResource("3_pnypn")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="UserHand" type="VBoxContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_7b1a3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yk8ou")
}

[node name="DrawLimitAlert" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="DrawLimitPanel" type="PanelContainer" parent="DrawLimitAlert"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.5
offset_top = -12.0
offset_right = 42.5
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(42.5, 6)
theme = ExtResource("2_pnypn")

[node name="MarginContainer" type="MarginContainer" parent="DrawLimitAlert/DrawLimitPanel"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="RichTextLabel" type="RichTextLabel" parent="DrawLimitAlert/DrawLimitPanel/MarginContainer"]
layout_mode = 2
text = "Can't draw more cards!"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="UserPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_pnypn")

[node name="CardContainer" type="Control" parent="UserPanel" node_paths=PackedStringArray("hand")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_7b1a3")
hand = NodePath("../..")

[node name="Card" parent="UserPanel/CardContainer" instance=ExtResource("1_ukqhq")]
layout_mode = 1

[node name="UserActions" parent="." instance=ExtResource("1_0k1h2")]
layout_mode = 2
size_flags_horizontal = 4
